--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/campo/DJI_0425.JPG"
                   data-fancybox="gallery">
-                  <img alt="a person standing in front of a rock formation"
+                  <img loading="lazy" alt="a person standing in front of a rock formation"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="dist/assets/Dron content (copy)/campo/DJI_0425.JPG" />
+                    src="dist/assets/Dron content (copy)/campo/DJI_0425.JPG" loading="lazy"/>
                 </a>
               </div>
             </div>
@@ -118,7 +118,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/sur/dji_fly_20230711_180840_270_1689109844403_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a cat laying on top of a sidewalk next to the ocean"
+                  <img loading="lazy" alt="a cat laying on top of a sidewalk next to the ocean"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/sur/dji_fly_20230711_180840_270_1689109844403_photo_optimized.JPG" />
                 </a>
@@ -128,7 +128,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/sur/dji_fly_20230711_181140_276_1689110162888_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a man standing on a beach next to the ocean"
+                  <img loading="lazy" alt="a man standing on a beach next to the ocean"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/sur/dji_fly_20230711_181140_276_1689110162888_photo_optimized.JPG" />
                 </a>
@@ -140,7 +140,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/casa/dji_fly_20231104_140820_535_1699117734920_pano_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a snow covered mountain with trees on the side"
+                  <img loading="lazy" alt="a snow covered mountain with trees on the side"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/casa/dji_fly_20231104_140820_535_1699117734920_pano_optimized.JPG" />
                 </a>
@@ -150,7 +150,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/campo/DJI_0466.JPG"
                   data-fancybox="gallery">
-                  <img alt="a branch of a plant floating in a body of water"
+                  <img loading="lazy" alt="a branch of a plant floating in a body of water"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/campo/DJI_0466.JPG" />
                 </a>
@@ -160,7 +160,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/capilla/dji_fly_20230629_113740_81_1688049679914_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a blue sky with a lot of red and orange clouds"
+                  <img loading="lazy" alt="a blue sky with a lot of red and orange clouds"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/capilla/dji_fly_20230629_113740_81_1688049679914_photo_optimized.JPG" />
                 </a>
@@ -170,7 +170,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/Lanchas/dji_fly_20231108_191824_668_1699482017167_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a view of the ocean from the top of a hill"
+                  <img loading="lazy" alt="a view of the ocean from the top of a hill"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/Lanchas/dji_fly_20231108_191824_668_1699482017167_photo_optimized.JPG" />
                 </a>
@@ -180,7 +180,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/sur/dji_fly_20230711_181416_282_1689110499379_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a pheasant flying in the sky with its wings spread"
+                  <img loading="lazy" alt="a pheasant flying in the sky with its wings spread"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/sur/dji_fly_20230711_181416_282_1689110499379_photo_optimized.JPG" />
                 </a>
@@ -193,7 +193,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/It/dji_fly_20240307_131612_290_1709814166976_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a statue of a man next to a statue of a woman"
+                  <img loading="lazy" alt="a statue of a man next to a statue of a woman"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/It/dji_fly_20240307_131612_290_1709814166976_photo_optimized.JPG" />
                 </a>
@@ -203,7 +203,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/capilla/dji_fly_20230629_114116_86_1688049954197_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a city street with tall buildings in the background"
+                  <img loading="lazy" alt="a city street with tall buildings in the background"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/capilla/dji_fly_20230629_114116_86_1688049954197_photo_optimized.JPG" />
                 </a>
@@ -213,7 +213,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/Lanchas/dji_fly_20231223_160932_521_1703359157680_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="25 de abril bridge spanning over Tagus river"
+                  <img loading="lazy" alt="25 de abril bridge spanning over Tagus river"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/Lanchas/dji_fly_20231223_160932_521_1703359157680_photo_optimized.JPG" />
                 </a>
@@ -223,7 +223,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/Lanchas/dji_fly_20231222_095452_400_1703249753224_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a lot of lanterns floating in the air at night"
+                  <img loading="lazy" alt="a lot of lanterns floating in the air at night"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/Lanchas/dji_fly_20231222_095452_400_1703249753224_photo_optimized.JPG" />
                 </a>
@@ -233,7 +233,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/casamineto/dji_fly_20230630_134450_187_1688143765767_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a flock of seaguls flying over a body of water"
+                  <img loading="lazy" alt="a flock of seaguls flying over a body of water"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/casamineto/dji_fly_20230630_134450_187_1688143765767_photo_optimized.JPG" />
                 </a>
@@ -245,7 +245,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/Lanchas/dji_fly_20231209_123352_176_1702136095446_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a statue of a headless angel"
+                  <img loading="lazy" alt="a statue of a headless angel"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/Lanchas/dji_fly_20231209_123352_176_1702136095446_photo_optimized.JPG" />
                 </a>
@@ -255,7 +255,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/dique/dji_fly_20230629_154748_160_1688064778720_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="Monument to the Discoveries viewed from top to bottom"
+                  <img loading="lazy" alt="Monument to the Discoveries viewed from top to bottom"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/dique/dji_fly_20230629_154748_160_1688064778720_photo_optimized.JPG" />
                 </a>
@@ -266,7 +266,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/dique/dji_fly_20230629_155234_168_1688064952598_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="Monument to the Discoveries viewed from top to bottom"
+                  <img loading="lazy" alt="Monument to the Discoveries viewed from top to bottom"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/dique/dji_fly_20230629_155234_168_1688064952598_photo_optimized.JPG" />
                 </a>
@@ -276,7 +276,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/campo/DJI_0516.JPG"
                   data-fancybox="gallery">
-                  <img alt="Monument to the Discoveries viewed from top to bottom"
+                  <img loading="lazy" alt="Monument to the Discoveries viewed from top to bottom"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/campo/DJI_0516.JPG" />
                 </a>
@@ -286,7 +286,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/sur/dji_fly_20230711_182000_294_1689110515140_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img
+                  <img loading="lazy"
                     alt="a group of people walking along the museum of art, architecture and technology of lisbon next to the Tagus river"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/sur/dji_fly_20230711_182000_294_1689110515140_photo_optimized.JPG" />
@@ -297,7 +297,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/sur/dji_fly_20230726_182540_305_1690407011993_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a city street with tall buildings in the background"
+                  <img loading="lazy" alt="a city street with tall buildings in the background"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/sur/dji_fly_20230726_182540_305_1690407011993_photo_optimized.JPG" />
                 </a>
@@ -307,7 +307,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/fiestaLancha/DJI_000f7.JPG"
                   data-fancybox="gallery">
-                  <img alt="25 de abril bridge spanning over Tagus river"
+                  <img loading="lazy" alt="25 de abril bridge spanning over Tagus river"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/fiestaLancha/DJI_000f7.JPG" />
                 </a>
@@ -317,7 +317,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/fiestaLancha/DJI_0817.JPG"
                   data-fancybox="gallery">
-                  <img alt="a lot of lanterns floating in the air at night"
+                  <img loading="lazy" alt="a lot of lanterns floating in the air at night"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/fiestaLancha/DJI_0817.JPG" />
                 </a>
@@ -327,7 +327,7 @@
               <div class="overflow-hidden h-full w-full">
                 <a href="dist/assets/Dron content (copy)/dique/dji_fly_20230629_154734_156_1688064540033_photo_optimized.JPG"
                   data-fancybox="gallery">
-                  <img alt="a flock of seaguls flying over a body of water"
+                  <img loading="lazy" alt="a flock of seaguls flying over a body of water"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                     src="dist/assets/Dron content (copy)/dique/dji_fly_20230629_154734_156_1688064540033_photo_optimized.JPG" />
                 </a>
@@ -341,7 +341,7 @@
                 <div class="overflow-hidden h-full w-full">
                   <a href="dist/assets/Dron content (copy)/dique/dji_fly_20230629_154828_163_1688064641160_photo_optimized.JPG"
                     data-fancybox="gallery">
-                    <img
+                    <img loading="lazy"
                       alt="a group of people walking along the museum of art, architecture and technology of lisbon next to the Tagus river"
                       class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
                       src="dist/assets/Dron content (copy)/dique/dji_fly_20230629_154828_163_1688064641160_photo_optimized.JPG" />
