--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <a href="dist/assets/Dron content (copy)/Lanchas/dji_fly_20231108_191824_668_1699482017167_photo_optimized.JPG"
                   data-fancybox="gallery">
                   <img loading="lazy" alt=""                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="dist/assets/Dron content (copy)/Lanchas/dji_fly_20231108_191824_668_1699482017167_photo_optimized.JPG" />
+                    src="dist/assets/Dron content (copy)/Lanchas/imageedit_12_8720177257.jpg" />
                 </a>
               </div>
             </div>
