--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
               <div class="overflow-hidden h-full w-full">
                 <a  href="dist/assets/Dron content (copy)/campo/DJI_0425.JPG"
                   data-fancybox="galley" loading="lazy" >
-                  <img   alt=""                    class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="dist/assets/Dron content (copy)/Lanchas/imageedit_21_7268415320.jpg"  />
+                  <img   alt="" width="1300" height="1000" class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
+                    src="dist/assets/Dron content (copy)/campo/DJI_0425.JPG"  />
                 </a>
               </div>
             </div>
