--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IvanSview - Portfolio</title>
+  <title>DronetaView - Portfolio</title>
   <meta name="description"
     content="Hello there, I'm Ivan Serralta – an intrepid explorer through the lens elevating my vision with stunning aerial perspectives, capturing landscapes, events, and real estate with precision and artistry.">
   <!-- Favicon -->
